# vqvae

./: .gitignore  BASELINE_FIXES.md  IMPLEMENTATION_GUIDE.md  KEY_TAKEAWAYS.md  PROJECT_STRUCTURE.md  README.md  RESULTS_SUMMARY.md  create_summary_figure.py  pyproject.toml  requirements.txt  run_experiment.py  run_stress_tests.py  vq_multimodal_experiment.py  vq_ste_rotation_lab.py  vq_ste_rotation_lab_guide.md
archive/: ANALYSIS.md  EXPERIMENTS_CHECKLIST.md  STRESS_TEST_ANALYSIS.md  SUMMARY.md  cleanup_old_files.sh  run_comprehensive_experiments.py  vq_2d_visualization.py  vq_comprehensive_experiments.py  vq_experiments_three_variants.py
archive/configs/: default.yaml
archive/old_vqvae/: experiment.py
archive/results_out/: summary.json
comprehensive_results/20250930_165008/: all_experiments.json
comprehensive_results/20250930_165050/: all_experiments.json  codebook_size_results.json  convergence_results.json  ste_verification.json
configs/: sweeps.yaml
docs/: LEGACY_INSIGHTS.md
experiments/idea_7_initialization/: __init__.py  config.yaml  run_linear_gaussian.py
notebooks/: exploratory_analysis.ipynb
results_out/: manual_logs.json
src/: utils.py
src/data/: __init__.py  base.py  gaussian.py  linear_gaussian.py
src/decoders/: __init__.py  base.py  linear.py
src/encoders/: __init__.py  base.py  linear.py
src/evaluation/: __init__.py  metrics.py  visualization.py
src/initialization/: __init__.py  rate_distortion.py  standard.py
tests/: __init__.py  test_data.py  test_quantizer.py  test_vqvae.py
vqvae/: __init__.py  utils.py
(+40 files in other folders)
